--- a/extra_playbooks/roles/kubernetes-apps/ingress-nginx/templates/ingress-rbac.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/ingress-nginx/templates/ingress-rbac.yaml.j2
@@ -22,9 +22,10 @@ apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRole
 metadata:
   name: system:nginx-ingress
+{% if boss__ingress__nginx__clusterrole_serviceaccount_labels is defined %}
   labels:
-    kubernetes.io/bootstrapping: rbac-defaults
-    addonmanager.kubernetes.io/mode: Reconcile
+{{ boss__ingress__nginx__clusterrole_serviceaccount_labels | indent( width=4, indentfirst=True,blank=True) }}
+{% endif %}
 rules:
 - apiGroups:
   - ""
@@ -80,9 +81,10 @@ kind: Role
 metadata:
   name: system::nginx-ingress-role
   namespace: {{boss__ingress__nginx__namespace_name}}
+{% if boss__ingress__nginx__role_nginx_ingress_role_labels is defined %}
   labels:
-    kubernetes.io/bootstrapping: rbac-defaults
-    addonmanager.kubernetes.io/mode: Reconcile
+{{ boss__ingress__nginx__role_nginx_ingress_role_labels | indent( width=4, indentfirst=True,blank=True) }}
+{% endif %}
 rules:
 - apiGroups:
   - ""
@@ -145,7 +147,7 @@ roleRef:
   name: system::nginx-ingress-role
 subjects:
 - kind: ServiceAccount
-  name: nginx-ingress
+  name: {{boss__ingress__nginx__serviceAccountName}}
   namespace: {{boss__ingress__nginx__namespace_name}}
 
 ---
@@ -172,5 +174,44 @@ roleRef:
   name: system:nginx-ingress
 subjects:
 - kind: ServiceAccount
-  name: nginx-ingress
+  name: {{boss__ingress__nginx__serviceAccountName}}
   namespace: {{boss__ingress__nginx__namespace_name}}
+
+
+# SOURCE: https://raw.githubusercontent.com/kubernetes/ingress-nginx/master/deploy/mandatory.yaml
+# # NEW
+# ---
+# apiVersion: rbac.authorization.k8s.io/v1beta1
+# kind: RoleBinding
+# metadata:
+#   name: nginx-ingress-role-nisa-binding
+#   namespace: ingress-nginx
+#   labels:
+#     app.kubernetes.io/name: ingress-nginx
+#     app.kubernetes.io/part-of: ingress-nginx
+# roleRef:
+#   apiGroup: rbac.authorization.k8s.io
+#   kind: Role
+#   name: nginx-ingress-role
+# subjects:
+#   - kind: ServiceAccount
+#     name: nginx-ingress-serviceaccount
+#     namespace: ingress-nginx
+#
+# ---
+# apiVersion: rbac.authorization.k8s.io/v1beta1
+# kind: ClusterRoleBinding
+# metadata:
+#   name: nginx-ingress-clusterrole-nisa-binding
+#   labels:
+#     app.kubernetes.io/name: ingress-nginx
+#     app.kubernetes.io/part-of: ingress-nginx
+# roleRef:
+#   apiGroup: rbac.authorization.k8s.io
+#   kind: ClusterRole
+#   name: nginx-ingress-clusterrole
+# subjects:
+#   - kind: ServiceAccount
+#     name: nginx-ingress-serviceaccount
+#     namespace: ingress-nginx
+#
