wip: ingress-nginx

--- a/extra_playbooks/roles/kubernetes-apps/ingress-nginx/templates/04-ingress-svc.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/ingress-nginx/templates/04-ingress-svc.yaml.j2
@@ -17,16 +17,18 @@ kind: Service
 metadata:
   name: default-http-backend
   namespace: {{boss__ingress__nginx__namespace_name}}
-  # labels:
-    # app.kubernetes.io/name: default-http-backend
-    # app.kubernetes.io/part-of: kube-system
-    # app.kubernetes.io/part-of: nginx-ingress
-    # kubernetes.io/minikube-addons: ingress
-    # kubernetes.io/minikube-addons-endpoint: ingress
-    # addonmanager.kubernetes.io/mode: Reconcile
 {% if boss__ingress__nginx__service__default_http_backend_labels is defined %}
   labels:
 {{ boss__ingress__nginx__service__default_http_backend_labels | indent( width=4, indentfirst=True,blank=True) }}
+{% endif %}
+
+{% if boss__ingress__nginx__service__default_http_backend_annotations is defined %}
+{% if boss__ingress__nginx__service__default_http_backend_annotations == False %}
+  # annotations:
+{% else %}
+  annotations:
+{{ boss__ingress__nginx__service__default_http_backend_annotations | indent( width=4, indentfirst=True,blank=True) }}
+{% endif %}
 {% endif %}
 spec:
   type: {{boss__ingress__nginx__service_default_http_backend_spec_type}}
