--- a/extra_playbooks/roles/kubernetes-apps/ingress-nginx/templates/03-ingress-svc-nodeport.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/ingress-nginx/templates/03-ingress-svc-nodeport.yaml.j2
@@ -10,17 +10,15 @@ apiVersion: v1
 kind: Service
 metadata:
   name: ingress-nginx
-  # namespace: ingress-nginx
   namespace: {{boss__ingress__nginx__namespace_name}}
-  # labels:
-  #   # app.kubernetes.io/name: ingress-nginx
-  #   # app.kubernetes.io/part-of: ingress-nginx
-  #   app.kubernetes.io/name: nginx-ingress
-  #   app.kubernetes.io/part-of: nginx-ingress
-
 {% if boss__ingress__nginx__service_labels is defined %}
   labels:
 {{ boss__ingress__nginx__service_labels | indent( width=4, indentfirst=True,blank=True) }}
+{% endif %}
+
+{% if boss__ingress__nginx__service_annotations is defined %}
+  annotations:
+{{ boss__ingress__nginx__service_annotations | indent( width=4, indentfirst=True,blank=True) }}
 {% endif %}
 spec:
   type: {{boss__ingress__nginx__service_ingress_nginx_spec_type}}
