--- a/extra_playbooks/roles/kubernetes-apps/prometheus-operator-v0-27-0/templates/0prometheus-operator-deployment.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/prometheus-operator-v0-27-0/templates/0prometheus-operator-deployment.yaml.j2
@@ -21,6 +21,7 @@ spec:
         - --logtostderr=true
         - --config-reloader-image=quay.io/coreos/configmap-reload:v0.0.1
         - --prometheus-config-reloader=quay.io/coreos/prometheus-config-reloader:v0.26.0
+        - --config-reloader-memory=50Mi
         image: quay.io/coreos/prometheus-operator:v0.26.0
         name: prometheus-operator
         ports:
