--- a/extra_playbooks/roles/kubernetes-apps/prometheus-operator-v0-27-0/templates/alertmanager-alertmanager.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/prometheus-operator-v0-27-0/templates/alertmanager-alertmanager.yaml.j2
@@ -41,4 +41,4 @@ spec:
     runAsNonRoot: true
     runAsUser: 1000
   serviceAccountName: alertmanager-main
-  version: v0.15.3
+  version: {{boss__prometheus__operator__alertmanager_version}}
