--- a/extra_playbooks/roles/kubernetes-apps/prometheus-operator-v0-27-0/templates/0prometheus-operator-deployment.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/prometheus-operator-v0-27-0/templates/0prometheus-operator-deployment.yaml.j2
@@ -19,10 +19,11 @@ spec:
       - args:
         - --kubelet-service=kube-system/kubelet
         - --logtostderr=true
-        - --config-reloader-image=quay.io/coreos/configmap-reload:v0.0.1
-        - --prometheus-config-reloader=quay.io/coreos/prometheus-config-reloader:v0.26.0
-        # - --config-reloader-memory=50Mi ( when we move to v0.29.0 we can use this )
-        image: quay.io/coreos/prometheus-operator:v0.26.0
+        - --config-reloader-image={{boss__prometheus__operator__configmap_reload_image_repo}}:{{boss__prometheus__operator__configmap_reload_image_tag}}
+        - --prometheus-config-reloader={{boss__prometheus__operator__prometheus_operator_config_reloader_image_repo}}:{{boss__prometheus__operator__prometheus_operator_config_reloader_image_tag}}
+        - --config-reloader-memory=50Mi
+        # ( when we move to v0.29.0 we can use this )
+        image: quay.io/coreos/prometheus-operator:{{boss__prometheus__operator__prometheus_operator_image_tag}}
         name: prometheus-operator
         ports:
         - containerPort: 8080
