--- a/extra_playbooks/roles/kubernetes-apps/prometheus-operator-v0-27-0/templates/grafana-deployment.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/prometheus-operator-v0-27-0/templates/grafana-deployment.yaml.j2
@@ -69,6 +69,9 @@ spec:
         - mountPath: /grafana-dashboard-definitions/0/nodes
           name: grafana-dashboard-nodes
           readOnly: false
+        - mountPath: /grafana-dashboard-definitions/0/persistentvolumesusage
+          name: grafana-dashboard-persistentvolumesusage
+          readOnly: false
         - mountPath: /grafana-dashboard-definitions/0/pods
           name: grafana-dashboard-pods
           readOnly: false
@@ -78,6 +81,8 @@ spec:
         - mountPath: /etc/grafana
           name: grafana-config
           readOnly: false
+      nodeSelector:
+        beta.kubernetes.io/os: linux
       securityContext:
         runAsNonRoot: true
         runAsUser: 65534
@@ -109,6 +114,9 @@ spec:
       - configMap:
           name: grafana-dashboard-nodes
         name: grafana-dashboard-nodes
+      - configMap:
+          name: grafana-dashboard-persistentvolumesusage
+        name: grafana-dashboard-persistentvolumesusage
       - configMap:
           name: grafana-dashboard-pods
         name: grafana-dashboard-pods
