--- a/extra_playbooks/roles/kubernetes-apps/prometheus-operator-v0-27-0/templates/node-exporter-daemonset.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/prometheus-operator-v0-27-0/templates/node-exporter-daemonset.yaml.j2
@@ -39,7 +39,9 @@ spec:
           name: root
           readOnly: true
       - args:
+        - --logtostderr
         - --secure-listen-address=$(IP):9100
+        - --tls-cipher-suites=TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,TLS_RSA_WITH_AES_128_CBC_SHA256,TLS_ECDHE_ECDSA_WITH_AES_128_CBC_SHA256,TLS_ECDHE_RSA_WITH_AES_128_CBC_SHA256
         - --upstream=http://127.0.0.1:9100/
         env:
         - name: IP
