--- a/extra_playbooks/roles/kubernetes-apps/prometheus-operator-v0-27-0/templates/0prometheus-operator-0prometheusCustomResourceDefinition.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/prometheus-operator-v0-27-0/templates/0prometheus-operator-0prometheusCustomResourceDefinition.yaml.j2
@@ -1559,12 +1559,14 @@ spec:
                 under. This is necessary to generate correct URLs. This is necessary
                 if Prometheus is not served from root of a DNS name.
               type: string
+{% endraw %}
             image:
               description: Image if specified has precedence over baseImage, tag and
                 sha combinations. Specifying the version is still necessary to ensure
                 the Prometheus Operator knows what version of Prometheus is being
                 configured.
               type: string
+{% raw %}
             imagePullSecrets:
               description: An optional list of references to secrets in the same namespace
                 to use for pulling prometheus and alertmanager images from registries
