--- a/extra_playbooks/roles/kubernetes-apps/prometheus-operator-v0-27-0/templates/grafana-deployment.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/prometheus-operator-v0-27-0/templates/grafana-deployment.yaml.j2
@@ -45,6 +45,9 @@ spec:
         - mountPath: /var/lib/grafana
           name: grafana-storage
           readOnly: false
+        - mountPath: /etc/grafana/provisioning/notifiers
+          name: grafana-notifiers
+          readOnly: false
         - mountPath: /etc/grafana/provisioning/datasources
           name: grafana-datasources
           readOnly: false
@@ -69,6 +72,9 @@ spec:
         - mountPath: /grafana-dashboard-definitions/0/nodes
           name: grafana-dashboard-nodes
           readOnly: false
+        - mountPath: /grafana-dashboard-definitions/0/persistentvolumesusage
+          name: grafana-dashboard-persistentvolumesusage
+          readOnly: false
         - mountPath: /grafana-dashboard-definitions/0/pods
           name: grafana-dashboard-pods
           readOnly: false
@@ -78,11 +84,17 @@ spec:
         - mountPath: /etc/grafana
           name: grafana-config
           readOnly: false
+      nodeSelector:
+        beta.kubernetes.io/os: linux
       securityContext:
         runAsNonRoot: true
         runAsUser: 65534
       serviceAccountName: grafana
       volumes:
+      # BUGFIX: t=2019-03-13T12:46:25+0000 lvl=eror msg="Can't read alert notification provisioning files from directory" logger=provisioning.notifiers path=/etc/grafana/provisioning/notifiers error="open /etc/grafana/provisioning/notifiers: no such file or directory"
+      # SOURCE: https://github.com/grafana/grafana/issues/15295#issuecomment-472403748
+      - emptyDir: {}
+        name: grafana-notifiers
       - emptyDir: {}
         name: grafana-storage
       - name: grafana-datasources
@@ -109,6 +121,9 @@ spec:
       - configMap:
           name: grafana-dashboard-nodes
         name: grafana-dashboard-nodes
+      - configMap:
+          name: grafana-dashboard-persistentvolumesusage
+        name: grafana-dashboard-persistentvolumesusage
       - configMap:
           name: grafana-dashboard-pods
         name: grafana-dashboard-pods
