--- a/extra_playbooks/roles/kubernetes-apps/prometheus-operator-v0-27-0/templates/prometheus-adapter-deployment.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/prometheus-operator-v0-27-0/templates/prometheus-adapter-deployment.yaml.j2
@@ -25,7 +25,7 @@ spec:
         - --metrics-relist-interval=1m
         - --prometheus-url=http://prometheus-k8s.monitoring.svc:9090/
         - --secure-port=6443
-        image: quay.io/coreos/k8s-prometheus-adapter-amd64:v0.4.1
+        image: {{boss__prometheus__operator__prometheus_adapter_crd_baseImage}}:{{boss__prometheus__operator__prometheus_adapter_image_tag}}
         name: prometheus-adapter
         ports:
         - containerPort: 6443
@@ -39,6 +39,8 @@ spec:
         - mountPath: /etc/adapter
           name: config
           readOnly: false
+      nodeSelector:
+        beta.kubernetes.io/os: linux
       serviceAccountName: prometheus-adapter
       volumes:
       - emptyDir: {}
