--- a/extra_playbooks/roles/kubernetes-apps/fluent-bit-centralized/templates/5fluent-bit-centralized.deploy.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/fluent-bit-centralized/templates/5fluent-bit-centralized.deploy.yaml.j2
@@ -19,6 +19,7 @@ spec:
 {% if boss__fluent__bit__centralized__deployment_spec_template_metadata_labels is defined %}
       labels:
 {{ boss__fluent__bit__centralized__deployment_spec_template_metadata_labels | indent( width=8, indentfirst=True,blank=True) }}
+{% endif %}
 {% if boss__fluent__bit__centralized__deployment_spec_template_metadata_annotations is defined %}
 {% if boss__fluent__bit__centralized__deployment_spec_template_metadata_annotations == "disabled" %}
       # annotations:
@@ -32,7 +33,7 @@ spec:
       containers:
       - name: {{boss__fluent__bit__centralized__shared_name}}
         image: {{ boss__fluent__bit__centralized__fluent_bit_image_repo }}:{{ boss__fluent__bit__centralized__fluent_bit_image_tag }}
-        {# command:  #}
+        # command:
 {% if boss__fluent__bit__centralized__deployment_spec_template_containers_resources is defined %}
 {% if boss__fluent__bit__centralized__deployment_spec_template_containers_resources == "disabled" %}
         # resources:
