--- a/extra_playbooks/roles/kubernetes-apps/fluent-bit-centralized/templates/6fluent-bit-centralized.svc.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/fluent-bit-centralized/templates/6fluent-bit-centralized.svc.yaml.j2
@@ -7,7 +7,7 @@ metadata:
 {% if boss__fluent__bit__centralized__service_labels == "disabled" %}
   # labels:
 {% else %}
-  annotations:
+  labels:
 {{ boss__fluent__bit__centralized__service_labels | indent( width=4, indentfirst=True,blank=True) }}
 {% endif %}
 {% endif %}
