--- a/extra_playbooks/roles/kubernetes-apps/fluent-bit-centralized/templates/5fluent-bit-centralized.deploy.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/fluent-bit-centralized/templates/5fluent-bit-centralized.deploy.yaml.j2
@@ -20,6 +20,7 @@ spec:
       labels:
 {{ boss__fluent__bit__centralized__deployment_spec_template_metadata_labels | indent( width=8, indentfirst=True,blank=True) }}
 {% endif %}
+
 {% if boss__fluent__bit__centralized__deployment_spec_template_metadata_annotations is defined %}
 {% if boss__fluent__bit__centralized__deployment_spec_template_metadata_annotations == "disabled" %}
       # annotations:
@@ -34,6 +35,7 @@ spec:
       - name: {{boss__fluent__bit__centralized__shared_name}}
         image: {{ boss__fluent__bit__centralized__fluent_bit_image_repo }}:{{ boss__fluent__bit__centralized__fluent_bit_image_tag }}
         # command:
+
 {% if boss__fluent__bit__centralized__deployment_spec_template_containers_env is defined %}
 {% if boss__fluent__bit__centralized__deployment_spec_template_containers_env == "disabled" %}
         # env:
@@ -42,6 +44,7 @@ spec:
 {{ boss__fluent__bit__centralized__deployment_spec_template_containers_env | indent( width=8, indentfirst=True,blank=True) }}
 {% endif %}
 {% endif %}
+
 {% if boss__fluent__bit__centralized__deployment_spec_template_spec_volumeMounts is defined %}
 {% if boss__fluent__bit__centralized__deployment_spec_template_spec_volumeMounts == "disabled" %}
         # volumeMounts:
@@ -50,6 +53,7 @@ spec:
 {{ boss__fluent__bit__centralized__deployment_spec_template_spec_volumeMounts | indent( width=8, indentfirst=True,blank=True) }}
 {% endif %}
 {% endif %}
+
 {% if boss__fluent__bit__centralized__deployment_spec_template_containers_resources is defined %}
 {% if boss__fluent__bit__centralized__deployment_spec_template_containers_resources == "disabled" %}
         # resources:
@@ -58,10 +62,12 @@ spec:
 {{ boss__fluent__bit__centralized__deployment_spec_template_containers_resources | indent( width=10, indentfirst=True,blank=True) }}
 {% endif %}
 {% endif %}
+
 {% if boss__fluent__bit__centralized__deployment_spec_template_containers_ports is defined %}
         ports:
 {{ boss__fluent__bit__centralized__deployment_spec_template_containers_ports | indent( width=8, indentfirst=True,blank=True) }}
 {% endif %}
+
 {% if boss__fluent__bit__centralized__deployment_spec_template_spec_volumes is defined %}
 {% if boss__fluent__bit__centralized__deployment_spec_template_spec_volumes == "disabled" %}
       # volumes:
@@ -71,19 +77,20 @@ spec:
 {% endif %}
 {% endif %}
 
-
-
 {% if boss__fluent__bit__centralized__deployment_spec_template_spec_hostNetwork is defined %}
 {% if boss__fluent__bit__centralized__deployment_spec_template_spec_hostNetwork == "disabled" %}
       # hostNetwork:
 {% else %}
       hostNetwork: {{boss__fluent__bit__centralized__deployment_spec_template_spec_hostNetwork}}
 {% endif %}
+{% endif %}
+
 {% if boss__fluent__bit__centralized__deployment_spec_template_spec_hostPID is defined %}
 {% if boss__fluent__bit__centralized__deployment_spec_template_spec_hostPID == "disabled" %}
       # hostPID:
 {% else %}
       hostPID: {{boss__fluent__bit__centralized__deployment_spec_template_spec_hostPID}}
+{% endif %}
 {% endif %}
 
 {% if boss__fluent__bit__centralized__deployment_spec_template_spec_nodeSelector is defined %}
