wip: syslog is finally going though

--- a/extra_playbooks/roles/kubernetes-apps/fluent-bit-centralized/templates/5fluent-bit-centralized.deploy.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/fluent-bit-centralized/templates/5fluent-bit-centralized.deploy.yaml.j2
@@ -9,10 +9,16 @@ metadata:
 {% endif %}
 spec:
   replicas: {{boss__fluent__bit__centralized__deployment_spec_replicas}}
-  selector:
+
 {% if boss__fluent__bit__centralized__deployment_spec_matchLabels is defined %}
+{% if boss__fluent__bit__centralized__deployment_spec_matchLabels == "disabled" %}
+  # selector:
+  #  matchLabels:
+{% else %}
+  selector:
     matchLabels:
 {{ boss__fluent__bit__centralized__deployment_spec_matchLabels | indent( width=6, indentfirst=True,blank=True) }}
+{% endif %}
 {% endif %}
   template:
     metadata:
