--- a/extra_playbooks/roles/kubernetes-apps/fluent-bit-centralized/templates/4fluent-bit-centralized-configmap-0-3-0.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/fluent-bit-centralized/templates/4fluent-bit-centralized-configmap-0-3-0.yaml.j2
@@ -136,14 +136,14 @@ data:
         Time_Format %Y-%m-%dT%H:%M:%S.%L
         Time_Keep   On
 
-    [PARSER]
-        Name        syslog-bossjones
-        Format      regex
-        Regex       /^\[(?<time>[^ ]*[^ ,]*)\]$/
-        Time_Key    time
-        Time_Format %b %d %H:%M:%S
-        Time_Format %Y-%m-%dT%H:%M:%S.%L
-        Time_Keep   On
+    # [PARSER]
+    #     Name        syslog-bossjones
+    #     Format      regex
+    #     Regex       /^\[(?<time>[^ ]*[^ ,]*)\]$/
+    #     Time_Key    time
+    #     Time_Format %b %d %H:%M:%S
+    #     Time_Format %Y-%m-%dT%H:%M:%S.%L
+    #     Time_Keep   On
 
     [PARSER]
         Name    mongodb
