WIP: fixing up some things for rsyslog-centralized, including a pvc

--- a/extra_playbooks/roles/kubernetes-apps/rsyslog-centralized/templates/4rsyslog-centralized-configmap-0-3-0.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/rsyslog-centralized/templates/4rsyslog-centralized-configmap-0-3-0.yaml.j2
@@ -18,6 +18,8 @@ data:
     # global(workDirectory="/var/spool/rsyslog")
     global(workDirectory=`echo $_RSYSLOG_SPOOL_PATH`)
 
+    # don't log every message
+    $RepeatedMsgReduction on
 
     # FIXME: Enable this 4/10/2019
     # INFO: https://www.aplura.com/wp-content/uploads/2017/08/syslog_cheatsheet.pdf
@@ -83,6 +85,16 @@ data:
     # if $!custom_hostname == "" then {
     #   set $!custom_hostname = "FROM-RSYSLOGD";
     # }
+    # ***************************************************************************************
+
+    # ***************************************************************************************
+    # SOURCE: https://github.com/instantlinux/docker-tools/blob/f4ce5659047cbf258908f8a090efa1a49688c337/images/rsyslogd/kubernetes.yaml
+    # SOURCE: https://www.rsyslog.com/doc/v8-stable/configuration/filters.html
+    # ***************************************************************************************
+    # :msg, regex, "Connection closed by 192.168.1.[0-9]\\{1,3\\} \\[preauth\\]" stop
+    # :msg, contains, "Error: Request packet type/version was invalid" stop
+    # :msg, contains, "Client request was invalid, bailing out..." stop
+    # :msg, contains, "required revision has been compacted" stop
     # ***************************************************************************************
 
     # # FIXME: Enable this 4/10/2019
@@ -308,3 +320,36 @@ data:
     export _IMUDP_PORT=${_IMUDP_PORT}
     export _IMRELP_PORT=${_IMRELP_PORT}
     export _RSYSLOG_SPOOL_PATH=${_RSYSLOG_SPOOL_PATH:-/var/spool/rsyslog}
+
+
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: {{boss__rsyslog__centralized__shared_name}}-logrotate-0-3-0
+  namespace: {{boss__rsyslog__centralized__namespace_name}}
+  labels:
+    k8s-app: {{boss__rsyslog__centralized__shared_name}}
+data:
+  syslog: |-
+    # This file created from k8s configmap
+    # the mail log files are used by all syslog daemons
+    # the news log files are used by all syslog daemons
+    /var/log/warn /var/log/messages /var/log/allmessages /var/log/localmessages
+    /var/log/mail /var/log/mail.info /var/log/mail.warn /var/log/mail.err
+    /var/log/news/news.crit /var/log/news/news.err /var/log/news/news.notice
+    /var/log/cron /var/log/secure
+    {
+        compress
+        dateext
+        maxage 365
+        rotate 45
+        missingok
+        notifempty
+        size +4096k
+        create 640 root root
+        sharedscripts
+        postrotate
+            /usr/bin/killall -HUP rsyslogd
+        endscript
+    }
