--- a/extra_playbooks/roles/kubernetes-apps/rsyslog-centralized/templates/4rsyslog-centralized-configmap-0-3-0.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/rsyslog-centralized/templates/4rsyslog-centralized-configmap-0-3-0.yaml.j2
@@ -235,8 +235,9 @@ data:
     # SOURCE: https://selivan.github.io/2017/02/07/rsyslog-log-forward-save-filename-handle-multi-line-failover.html
     # Write all messages of auth and authpriv facilities into file /var/log/auth.log and continue processing this messages
     # modern
-    if ( $syslogfacility-text contains "authUniFiSecurityGateway3P" ) then {
+    if ( $programname == "authUniFiSecurityGateway3P" ) then {
         action(type="omfile" file="/var/log/unifi.log")
+        ~
     }
 
     # *.* action(type="omfile" File="{{boss__rsyslog__centralized__path_to_logs_inside_container}}/rsyslog_messages.log" template="dcloud-metrics")
