--- a/extra_playbooks/roles/kubernetes-apps/rsyslog-centralized/templates/4rsyslog-centralized-configmap-0-3-0.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/rsyslog-centralized/templates/4rsyslog-centralized-configmap-0-3-0.yaml.j2
@@ -236,7 +236,7 @@ data:
     # Write all messages of auth and authpriv facilities into file /var/log/auth.log and continue processing this messages
     # modern
     # SOURCE: https://bsamuels.net/2014/08/30/redirecting-rsyslog-output.html
-    if ( $programname == "UniFiSecurityGateway3P" ) then {
+    if ( $fromhost == "UniFiSecurityGateway3P" ) then {
         action(type="omfile" file="/var/log/unifi.log")
         ~
     }
