--- a/extra_playbooks/roles/kubernetes-apps/rsyslog-centralized/templates/3rsyslog-centralized-role-binding.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/rsyslog-centralized/templates/3rsyslog-centralized-role-binding.yaml.j2
@@ -11,4 +11,4 @@ subjects:
 - kind: ServiceAccount
   name: {{boss__rsyslog__centralized__shared_name}}
   namespace: {{boss__rsyslog__centralized__namespace_name}}
-  apiGroup: ""
+  # apiGroup: ""
